<resources>
    <string name="app_name">Location Alarm </string>
    <string name="title_activity_maps">Location Alarm</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="check_point_name_hint">Enter alarm name for this checkpoint</string>
    <string name="destination_reached">Destination Reached</string>
    <string name="button_dismiss_label">Dismiss</string>
    <string name="launch_activity">Launch activity</string>
    <string name="unknown_location">Location Unknown</string>
    <string name="location_reached">Location Reached</string>
    <string name="current_location">You are at</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="remove_location_updates">Remove</string>
    <string name="lat_dialog_text">Latitude:</string>
    <string name="long_dialog_text">Longitude:</string>
    <string name="destination">Destination</string>
    <string name="pin">location pin</string>
    <string name="tag">myapp:mywakelocktag.</string>
</resources>
